Finished connecting event-management form to database and added tests and got coverage report