@@ -1,139 +1,104 @@
 package com.software.eventmanagement.controller;
 
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
+import com.software.eventmanagement.model.Event;
+import com.software.eventmanagement.model.Skill;
+import com.software.eventmanagement.service.EventFormService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import com.software.eventmanagement.model.Event;
-import com.software.eventmanagement.repository.EventRepository;
-import com.software.eventmanagement.service.EventFormService;
+import java.time.LocalDate;
+import java.util.*;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-public class EventFormControllerTest {
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-    @Autowired
-    private MockMvc mockMvc;
+@ExtendWith(MockitoExtension.class)
+class EventFormControllerTest {
 
-    @MockBean
-    private EventRepository eventRepository;
-
-    @MockBean
+    @Mock
     private EventFormService eventService;
 
-    private Event existingEvent;
-    private Event newEvent;
+    @InjectMocks
+    private EventFormController eventController;
+
+    private MockMvc mockMvc;
+    private Event event;
 
     @BeforeEach
-    public void setUp() {
-        // Initialize the test events
-        existingEvent = new Event("Event 1", "Description", "Location", Arrays.asList("Skill1"), "High", LocalDate.now());
-        existingEvent.setId(1L);
-        
-        newEvent = new Event("Event 2", "New Event Description", "New Location", Arrays.asList("Skill2"), "Medium", LocalDate.of(2025, 5, 15));
-        newEvent.setId(2L);
+    void setUp() {
+        mockMvc = MockMvcBuilders.standaloneSetup(eventController).build();
+
+        event = new Event(
+                "Community Cleanup",
+                "A local cleanup event",
+                "City Park",
+                new HashSet<>(Arrays.asList(Skill.TEAMWORK, Skill.ORGANIZATION)),
+                "High",
+                LocalDate.of(2025, 5, 15)
+        );
+        event.setId(1L);
     }
 
     @Test
-public void testCreateEvent() throws Exception {
-    Event event = new Event("Test Event", "Description", "Location", List.of("Skill1", "Skill2"), "High", LocalDate.now());
+    void testGetAllEvents() throws Exception {
+        when(eventService.getAllEvents()).thenReturn(Collections.singletonList(event));
 
-    // Mocking the event creation
-    when(eventService.createEvent(any(Event.class))).thenReturn(event);
+        mockMvc.perform(get("/api/events"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.size()").value(1))
+                .andExpect(jsonPath("$[0].eventName").value("Community Cleanup"));
 
-    // Perform the POST request and check if eventName is returned
-    mockMvc.perform(post("/api/events/add")
-            .contentType(MediaType.APPLICATION_JSON)
-            .content("{\"eventName\":\"Test Event\", \"eventDescription\":\"Description\", \"location\":\"Location\", \"skills\":[\"Skill1\", \"Skill2\"], \"urgency\":\"High\", \"eventDate\":\"2025-03-07\"}")
-            .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isCreated())
-            .andExpect(jsonPath("$.eventName").value("Test Event"));
-}
-
-@Test
-public void testUpdateEvent() throws Exception {
-    Long eventId = 1L;
-    Event existingEvent = new Event("Old Event", "Old Description", "Old Location", List.of("Skill1"), "Low", LocalDate.now());
-    Event updatedEvent = new Event("Updated Event", "Updated Description", "Updated Location", List.of("Skill2"), "High", LocalDate.now().plusDays(1));
-
-    // Mocking the findById() to return the existing event
-    when(eventRepository.findById(eventId)).thenReturn(Optional.of(existingEvent));
-
-    // Mocking the save() method to return the updated event
-    when(eventRepository.save(any(Event.class))).thenReturn(updatedEvent);
-
-    // Perform the PUT request to update the event
-    mockMvc.perform(put("/api/events/{id}", eventId)
-            .contentType(MediaType.APPLICATION_JSON)
-            .content("{\"eventName\":\"Updated Event\", \"eventDescription\":\"Updated Description\", \"location\":\"Updated Location\", \"skills\":[\"Skill2\"], \"urgency\":\"High\", \"eventDate\":\"2025-03-08\"}")
-            .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.eventName").value("Updated Event"));
-}
-
+        verify(eventService, times(1)).getAllEvents();
+    }
 
     @Test
-public void testGetEventById() throws Exception {
-    Long eventId = 1L;
-    Event event = new Event("Test Event", "Description", "Location", List.of("Skill1", "Skill2"), "High", LocalDate.now());
+    void testGetEventById() throws Exception {
+        when(eventService.getEventById(1L)).thenReturn(event);  // FIXED: Remove Optional
 
-    // Mocking the getEventById behavior
-    when(eventService.getEventById(eventId)).thenReturn(event);
-
-    // Perform GET request and check if eventName is returned
-    mockMvc.perform(get("/api/events/{id}", eventId)
-            .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$.eventName").value("Test Event"));
-}
-
-
-    @Test
-    public void testGetEventByIdNotFound() throws Exception {
-        // Mock the repository to return an empty optional (event not found)
-        when(eventRepository.findById(1L)).thenReturn(Optional.empty());
-
-        // Perform the GET request for a non-existing event
         mockMvc.perform(get("/api/events/1"))
-                .andExpect(status().isNotFound());  // Expect 404 Not Found
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.eventName").value("Community Cleanup"));
+
+        verify(eventService, times(1)).getEventById(1L);
     }
 
     @Test
-public void testGetAllEvents() throws Exception {
-    Event event = new Event("Test Event", "Description", "Location", List.of("Skill1", "Skill2"), "High", LocalDate.now());
+    void testAddEvent() throws Exception {
+        when(eventService.createEventWithSkills(
+                anyString(), anyString(), anyString(), anySet(), anyString(), any(LocalDate.class)
+        )).thenReturn(event);
 
-    // Mocking the getAllEvents behavior
-    when(eventService.getAllEvents()).thenReturn(List.of(event));
+        mockMvc.perform(post("/api/events/add")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{ \"eventName\": \"Community Cleanup\", " +
+                                "\"eventDescription\": \"A local cleanup event\", " +
+                                "\"location\": \"City Park\", " +
+                                "\"skills\": [\"TEAMWORK\", \"ORGANIZATION\"], " +
+                                "\"urgency\": \"High\", " +
+                                "\"eventDate\": \"2025-05-15\" }"))
+                .andExpect(status().isCreated())  // ✅ Change from isOk() to isCreated()
+                .andExpect(jsonPath("$.eventName").value("Community Cleanup"));
 
-    // Perform GET request and check if eventName is returned in the list
-    mockMvc.perform(get("/api/events")
-            .accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isOk())
-            .andExpect(jsonPath("$[0].eventName").value("Test Event"));
-}
+        verify(eventService, times(1)).createEventWithSkills(
+                anyString(), anyString(), anyString(), anySet(), anyString(), any(LocalDate.class));
+    }
 
 
+    @Test
+    void testDeleteEvent() throws Exception {
+        when(eventService.deleteEvent(1L)).thenReturn(true);  // FIXED: Return boolean
 
+        mockMvc.perform(delete("/api/events/1"))
+                .andExpect(status().isNoContent());
 
-
-
-
-
+        verify(eventService, times(1)).deleteEvent(1L);
+    }
 }
